--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>Goran Latisko Portfolio<br /></h1>
-						<p>Software engineer skilled in Java, SQL and Python</p>
+						<p>Data engineer skilled in Java, SQL and Python</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -58,6 +58,7 @@
 					<div id="main">
 
 						<!-- Featured Post -->
+						https://github.com/glatisko/kafka_basic
 							<article class="post featured">
 								<header class="major">									
 									<h2><a href="#">Data Cleaning in Python<br />
@@ -72,6 +73,17 @@
 
 						<!-- Posts -->
 							<section class="posts">
+								<article>
+									<header>										
+										<h2><a href="#">Data Cleaning in Python<br />
+									</a></h2>
+									<p>In this project, we clean raw housing data and save it into SQLite database</p>
+								</header>
+								<a href="#" class="image main"><img src="images/housing.jpg" alt="" /></a>
+									<ul class="actions special">
+										<li><a href="#" class="button">View Project</a></li>
+									</ul>
+								</article>
 								<article>
 									<header>										
 										<h2><a href="#">Web Scrapping using Python<br />
