--- a/index.html
+++ b/index.html
@@ -57,15 +57,14 @@
 				<!-- Main -->
 					<div id="main">
 
-						<!-- Featured Post -->
-						https://github.com/glatisko/kafka_basic
+						<!-- Featured Post -->						
 							<article class="post featured">
 								<header class="major">									
-									<h2><a href="#">Data Cleaning in Python<br />
+									<h2><a href="#">Kafka producer/consumer<br />
 									</a></h2>
-									<p>In this project, we clean raw housing data and save it into SQLite database</p>
+									<p>In this project, we use kafka client to produce/consume data to/from kafka topic</p>
 								</header>
-								<a href="#" class="image main"><img src="images/housing.jpg" alt="" /></a>
+								<a href="#" class="image main"><img src="images/kafka.png" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="#" class="button large">View Project</a></li>
 								</ul>
