--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 						<!-- Featured Post -->						
 							<article class="post featured">
 								<header class="major">									
-									<h2><a href="#">Kafka producer/consumer<br />
+									<h2><a href="https://github.com/glatisko/kafka_basic">Kafka producer/consumer<br />
 									</a></h2>
 									<p>In this project, we use kafka client to produce/consume data to/from kafka topic</p>
 								</header>
