--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
 									</a></h2>
 									<p>In this project, we use kafka client to produce/consume data to/from kafka topic</p>
 								</header>
-								<a href="#" class="image main"><img src="images/kafka.png" alt="" /></a>
+								<a href="https://github.com/glatisko/kafka_basic" class="image main"><img src="images/kafka.png" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="#" class="button large">View Project</a></li>
+									<li><a href="https://github.com/glatisko/kafka_basic" class="button large">View Project</a></li>
 								</ul>
 							</article>
 
