--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>Goran Latisko Portfolio<br /></h1>
-						<p>Data engineer skilled in Java, SQL and Python</p>
+						<p>Software Engineer skilled in  Java EE , SQL and Python</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -57,7 +57,8 @@
 				<!-- Main -->
 					<div id="main">
 
-						<!-- Featured Post -->						
+						<!-- Featured Post 
+
 							<article class="post featured">
 								<header class="major">									
 									<h2><a href="https://github.com/glatisko/kafka_basic">Kafka producer/consumer<br />
@@ -69,9 +70,21 @@
 									<li><a href="https://github.com/glatisko/kafka_basic" class="button large">View Project</a></li>
 								</ul>
 							</article>
+							-->				
 
 						<!-- Posts -->
 							<section class="posts">
+								<article>
+									<header>										
+										<h2><a href="#">Bookstore Spring JMS<br />
+									</a></h2>
+									<p>In this project, we use Spring JMS to publish book order request from Bookstore Front End to an ActiveMQ queue. The JMS message  is read by Warehouse  which publishes ackonwledgement message  to  a queue and sends updated inventory to a durable topic</p>
+								</header>
+								<a href="#" class="image main"><img src="images/SpringJMS.PNG" alt="" /></a>
+									<ul class="actions special">
+										<li><a href="#" class="button">View Project</a></li>
+									</ul>
+								</article>
 								<article>
 									<header>										
 										<h2><a href="#">Data Cleaning in Python<br />
