--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 								</header>
 								<a href="#" class="image main"><img src="images/SpringJMS.PNG" alt="" /></a>
 									<ul class="actions special">
-										<li><a href="#" class="button">View Project</a></li>
+										<li><a href="https://github.com/glatisko/BookstoreSpringJMS" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
