added react blog

--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@
 
 						<!-- Posts -->
 							<section class="posts">
+
+								<!-- JMS Bookstore -->
 								<article>
 									<header>										
 										<h2><a href="#">Bookstore Spring JMS<br />
@@ -85,6 +87,20 @@
 										<li><a href="https://github.com/glatisko/BookstoreSpringJMS" class="button">View Project</a></li>
 									</ul>
 								</article>
+
+								<!-- React Blog -->
+								<article>
+									<header>										
+										<h2><a href="#">React Blog<br />
+									</a></h2>
+									<p>This MERN web app allows user to login/create new account via Firebase and upvote/comment published articles</p>
+								</header>
+								<a href="#" class="image main"><img src="https://github.com/glatisko/React_blog/blob/main/pics/3.PNG" alt="" /></a>
+									<ul class="actions special">										
+										<li><a href="https://hello-react-goran.herokuapp.com/" class="button">View Project</a></li>
+									</ul>
+								</article>
+
 								<article>
 									<header>										
 										<h2><a href="#">Data Cleaning in Python<br />
