added react blog 2

--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
 									<header>										
 										<h2><a href="#">React Blog<br />
 									</a></h2>
-									<p>This MERN web app allows user to login/create new account via Firebase and upvote/comment published articles</p>
+									<p>This Full Stack MERN web app allows firebase authenticated users upvote/comment published articles</p>
 								</header>
-								<a href="#" class="image main"><img src="https://github.com/glatisko/React_blog/blob/main/pics/3.PNG" alt="" /></a>
+								<a href="#" class="image main"><img src="images/react_blog.png" alt="" /></a>
 									<ul class="actions special">										
 										<li><a href="https://hello-react-goran.herokuapp.com/" class="button">View Project</a></li>
 									</ul>
