update for 3 react projects

--- a/index.html
+++ b/index.html
@@ -101,6 +101,34 @@
 									</ul>
 								</article>
 
+								<!-- React Spring CRM -->
+								<article>
+									<header>										
+										<h2><a href="#">React Spring CRM<br />
+									</a></h2>
+									<p>Contact Management App for adding/listing contacts to/from H2 Database. Front End: React, 					
+										Back End: Spring Boot, Database: H2</p>
+								</header>
+								<a href="#" class="image main"><img src="images/CRM.PNG" alt="" /></a>
+									<ul class="actions special">										
+										<li><a href="https://github.com/glatisko/ReactSpringBootCRM" class="button">View Project</a></li>
+									</ul>
+								</article>
+
+								<!-- React AWS Serverless -->
+								<article>
+									<header>										
+										<h2><a href="#">React AWS Serverless Hotel<br />
+									</a></h2>
+									<p>Hotel website implemented as AWS Serverless React Single Page Application with dynamically loaded content from NoSQL DynamoDB
+										Front End: React, Back End: AWS API Gateway, AWS Lambda Functions, Database: NoSQL DynamoDB, Deployment: AWS Amplify</p>
+								</header>
+								<a href="#" class="image main"><img src="images/HOTEL.PNG" alt="" /></a>
+									<ul class="actions special">										
+										<li><a href="https://master.d38fdrfk7snjqk.amplifyapp.com/" class="button">View Project</a></li>
+									</ul>
+								</article>
+
 								<article>
 									<header>										
 										<h2><a href="#">Data Cleaning in Python<br />
