--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>Goran Latisko Portfolio<br /></h1>
-						<p>Software Engineer skilled in  Java EE , SQL and Python</p>
+						<p>Software Engineer skilled in  Java, React, SQL and Python</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -93,35 +93,51 @@
 									<header>										
 										<h2><a href="#">React Blog<br />
 									</a></h2>
-									<p>This Full Stack MERN web app allows firebase authenticated users upvote/comment published articles</p>
+									<p>MERN web application allowing firebase authenticated users to upvote/comment articles</p>									
 								</header>
 								<a href="#" class="image main"><img src="images/react_blog.png" alt="" /></a>
 									<ul class="actions special">										
 										<li><a href="https://hello-react-goran.herokuapp.com/" class="button">View Project</a></li>
 									</ul>
 								</article>
+								
+								<!-- React Workout buddy -->
+								<article>
+									<header>										
+										<h2><a href="#">React Workout Buddy
+									</a></h2>
+									<p>MERN web application for tracking workouts.<br></p>									   
+								</header>
+								<a href="#" class="image main"><img src="images/workout_buddy.PNG" alt="" /></a>
+									<ul class="actions special">										
+										<li><a href="https://github.com/glatisko/WorkoutBuddy" class="button">View Project</a></li>
+									</ul>
+								</article>
 
 								<!-- React Spring CRM -->
+								<!--
 								<article>
 									<header>										
 										<h2><a href="#">React Spring CRM<br />
 									</a></h2>
-									<p>Contact Management App for adding/listing contacts to/from H2 Database. Front End: React, 					
-										Back End: Spring Boot, Database: H2</p>
+									<p>Contact Management web application<br>
+									   Front End: React <br>
+									   Back End: Spring Boot <br>
+									   Database: H2 <br></p>
 								</header>
 								<a href="#" class="image main"><img src="images/CRM.PNG" alt="" /></a>
 									<ul class="actions special">										
 										<li><a href="https://github.com/glatisko/ReactSpringBootCRM" class="button">View Project</a></li>
 									</ul>
 								</article>
+								-->
 
 								<!-- React AWS Serverless -->
 								<article>
 									<header>										
-										<h2><a href="#">React AWS Serverless Hotel<br />
+										<h2><a href="#">React AWS Serverless SPA<br />
 									</a></h2>
-									<p>Hotel website implemented as AWS Serverless React Single Page Application with dynamically loaded content from NoSQL DynamoDB
-										Front End: React, Back End: AWS API Gateway, AWS Lambda Functions, Database: NoSQL DynamoDB, Deployment: AWS Amplify</p>
+									<p>AWS Serverless React Single Page Application with dynamically loaded content from DynamoDB</p>
 								</header>
 								<a href="#" class="image main"><img src="images/HOTEL.PNG" alt="" /></a>
 									<ul class="actions special">										
