--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 								</header>
 								<a href="#" class="image main"><img src="images/workout_buddy.PNG" alt="" /></a>
 									<ul class="actions special">										
-										<li><a href="https://github.com/glatisko/WorkoutBuddy" class="button">View Project</a></li>
+										<li><a href="https://workoutbuddy3.herokuapp.com/" class="button">View Project</a></li>
 									</ul>
 								</article>
 
