updated blog link

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 								</header>
 								<a href="#" class="image main"><img src="images/react_blog.png" alt="" /></a>
 									<ul class="actions special">										
-										<li><a href="https://shielded-eyrie-85237.herokuapp.com/" class="button">View Project</a></li>
+										<li><a href="https://my-react-blog-eb5a5.ue.r.appspot.com/" class="button">View Project</a></li>
 									</ul>
 								</article>
 								
