workout buddy and tableu

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 								</header>
 								<a href="#" class="image main"><img src="images/workout_buddy.PNG" alt="" /></a>
 									<ul class="actions special">										
-										<li><a href="https://workoutbuddy3.herokuapp.com/" class="button">View Project</a></li>
+										<li><a href="https://workoutbuddy-371713.ue.r.appspot.com/login" class="button">View Project</a></li>
 									</ul>
 								</article>
 
@@ -135,6 +135,7 @@
 								-->
 
 								<!-- React AWS Serverless -->
+								<!---
 								<article>
 									<header>										
 										<h2><a href="#">React AWS Serverless SPA<br />
@@ -146,6 +147,18 @@
 										<li><a href="https://master.d38fdrfk7snjqk.amplifyapp.com/" class="button">View Project</a></li>
 									</ul>
 								</article>
+							-->
+							<article>
+								<header>										
+									<h2><a href="#">Tableau Dashboards<br />
+									</a></h2>
+								</header>
+								<a href="#" class="image fit"><img src="images/tableau_map.PNG" alt="" /></a>
+								<p>Tableau Dashboards for housing and other data</p>
+								<ul class="actions special">
+									<li><a href="https://public.tableau.com/app/profile/goran.latisko/viz/BookMap_16719897992240/Map?publish=yes" class="button">View Project</a></li>
+								</ul>
+							</article>
 
 								<article>
 									<header>										
@@ -169,17 +182,7 @@
 										<li><a href="#" class="button">View Project</a></li>
 									</ul>
 								</article>
-								<article>
-									<header>										
-										<h2><a href="#">Tableau Dashboards<br />
-										</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/tableau.jpg" alt="" /></a>
-									<p>Tableau Dashboards for housing and other data</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">View Project</a></li>
-									</ul>
-								</article>
+								
 								
 							</section>
 
