--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 									</a></h2>
 								</header>
 								<a href="#" class="image fit"><img src="images/tableau_map.PNG" alt="" /></a>
-								<p>Tableau Dashboards for housing and other data</p>
+								<p>Tableau Worksheet for bank losses per state</p>
 								<ul class="actions special">
 									<li><a href="https://public.tableau.com/app/profile/goran.latisko/viz/BookMap_16719897992240/Map?publish=yes" class="button">View Project</a></li>
 								</ul>
