--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 							-->
 							<article>
 								<header>										
-									<h2><a href="#">Tableau Dashboards<br />
+									<h2><a href="#">Tableau<br />
 									</a></h2>
 								</header>
 								<a href="#" class="image fit"><img src="images/tableau_map.PNG" alt="" /></a>
