Python correlation completed

--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
 									<header>										
 										<h2><a href="#">Data Correlation in Python </a>
 									</a></h2>
-									<p>Movies CSV from kaggle.com cleaned and analysed for dependencies using scatter diagrams and heat maps in Python</p>
+									<p>Movies data from kaggle.com cleaned and analysed for dependencies using Python regression plot and heat map</p>
 								</header>
-								<a href="#" class="image main"><img src="images/heatmap.PNG" alt="" /></a>
+								<a href="#" class="image main"><img src="images/heatmap2.PNG" alt="" /></a>
 									<ul class="actions special">
-										<li><a href="" class="button">View Project</a></li>
+										<li><a href="https://github.com/glatisko/PythonCorrelation" class="button">View Project</a></li>
 									</ul>
 								</article>
 
